drools fix